# magentic-two

./: .gitignore  LlamaCoderAgent.py  README.md  RssFeedRetrieverAgent.py  TextWebSurferAgent.py  cli.py  magenticone.py  ollama_chat_client.py  pyproject.toml  structured_output.py  tests.py  utils.py
